Prevent Mojeek's CSS from messing with the line-wrapping of IWB elements

--- a/css/content-search-filtering.css
+++ b/css/content-search-filtering.css
@@ -63,6 +63,7 @@
   font-weight: normal;
   line-height: normal;
   letter-spacing: normal;
+  white-space: normal;
 }
 .iwb-new-link div:first-of-type {
   display: inline-block;
